--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <h2>Variables</h2>
 
                 <p>Typage faible</p>
-                    <pre><code data-trim contenteditable>
+                    <pre><code data-trim contenteditable class="js">
 function(){
     var _i = 10;
     typeof _i; // "number"
@@ -151,7 +151,7 @@ function(){
                     </code></pre>
 
                 <p>Portée et Hoisting</p>
-                    <pre><code data-trim contenteditable>
+                    <pre><code data-trim contenteditable class="js">
 var testVar = "Variable globale";
 
 function example() {
@@ -180,7 +180,7 @@ example();
                 <h2>Variables</h2>
 
                 <p>Déclarations</p>
-                    <pre><code data-trim contenteditable>
+                    <pre><code data-trim contenteditable class="js">
 // Déclarations multiples
 var maVariable1,
     maVariable2 = 15,
@@ -191,7 +191,7 @@ var maVariable1 = maVariable2 = 15;
                     </code></pre>
 
                 <p>Référence vs. copie</p>
-                    <pre><code data-trim contenteditable>
+                    <pre><code data-trim contenteditable class="js">
 var a = 3.14;   // Déclare et initialise une variable
 var b = a;      // copie le contenu de a dans b
 a = 4;          // modifie la valeur de a
@@ -219,13 +219,13 @@ alert(b);       // affiche le tableau modifié : [99,2]
                 <h2>Correspondances booléennes</h2>
 
                 <p>Tests d'existence</p>
-                    <pre><code data-trim contenteditable>
+                    <pre><code data-trim contenteditable class="js">
 true  == 1 == "chaine" == objet
 false == 0 == "" == null == undefined
                     </code></pre>
 
                 <p>... ce qui permet de tester avant d'utiliser un objet</p>
-                    <pre><code data-trim contenteditable>
+                    <pre><code data-trim contenteditable class="js">
 if (undefined != monObjet) {
    // utilisation de mon objet
 }
@@ -255,14 +255,14 @@ monObjet && // utilisation de mon objet
                 <h2>Fonctions</h2>
 
                 <p>Nommées</p>
-                    <pre><code data-trim contenteditable>
+                    <pre><code data-trim contenteditable class="js">
 function sheldon() {
     alert("Bazinga!");
 }
 sheldon();
                     </code></pre>
                 <p>Anonymes</p>
-                    <pre><code data-trim contenteditable>
+                    <pre><code data-trim contenteditable class="js">
 var sheldon = function() {
     alert("Bazinga!");
 }
@@ -277,7 +277,7 @@ sheldon();
                 <h2>Objets et tableaux</h2>
 
                 <p>Object : ensemble de valeurs nommées</p>
-                    <pre><code data-trim contenteditable>
+                    <pre><code data-trim contenteditable class="js">
 var point = new Object();
 point.x = 1;
 point["y"] = 2;
@@ -286,7 +286,7 @@ var point = { x : 1, y : 3 };
 
                     </code></pre>
                 <p>Tableaux : ensemble de valeurs indexées</p>
-                    <pre><code data-trim contenteditable>
+                    <pre><code data-trim contenteditable class="js">
 var a = new Array(1.2, true, { x:1, y:3 });
 var b = [1.2, true, { x:1, y:3 }];
                     </code></pre>
@@ -296,7 +296,7 @@ var b = [1.2, true, { x:1, y:3 }];
                 <h2>Objets et tableaux</h2>
 
                 <p>Parcourir avec <code>for ... in</code></p>
-                <pre><code data-trim contenteditable>
+                <pre><code data-trim contenteditable class="js">
 function consoleContenu(element) {
     for( var identifiant in element ) {
         console && console.log( identifiant + ":" + element[identifiant] );
@@ -435,7 +435,7 @@ alert(myHero.getName()); // "Superslip"
             <section>
                 <h2>Piège : contexte</h2>
                 <p><code>this</code> représente le contexte dans lequel s’exécute une fonction au moment où elle est appelée</p>
-                <pre><code data-trim contenteditable>
+                <pre><code data-trim contenteditable class="js">
 function quiSuisJe() {
     alert(this);
 }
@@ -453,7 +453,7 @@ coucou.quiSuisJe(); // [object Object]
             <section>
                 <h2>Piège : gestion des erreurs</h2>
                 <p>Les gestion des erreurs est possible en JavaScript</p>
-                <pre><code data-trim contenteditable>
+                <pre><code data-trim contenteditable class="js">
 try {
     // code Javascript à surveiller
 }
@@ -471,7 +471,7 @@ finally {
             <section>
                 <h2>Piège : nombres</h2>
                 <p>Maximum, minimum</p>
-                <pre><code data-trim contenteditable>
+                <pre><code data-trim contenteditable class="js">
 var x = 9007199254740992; // Max
 var y = -x;
 x == x + 1; // true
@@ -481,7 +481,7 @@ z = x + 2; // 9007199254740994, ok
 z - 1; // 9007199254740992, WTF ?
                 </code></pre>
                 <p>Opérateurs arithmétiques en 64bits, décalages et opérations bit à bit en 32 bits seulement</p>
-                <pre><code data-trim contenteditable>
+                <pre><code data-trim contenteditable class="js">
 var x = 9007199254740992; // 2^53, [10000000....00]
 x / 2;      // 4503599627370496, ok
 x >> 1;     // 0 au lieu de 2^52
@@ -491,7 +491,7 @@ x | 1;      // 1 au lieu de 2^52 + 1
             <section>
                 <h2>Piège : Référence Vs. Type</h2>
 
-                <pre><code data-trim contenteditable>
+                <pre><code data-trim contenteditable class="js">
 var objects = [{}, {}, {}];
 
 for(var i = 0; i < queries.length; i++) {
@@ -510,7 +510,7 @@ objects[2].logIndex(); // 3, WTF !
                 <h2>Astuce : renvoi de fonction</h2>
 
                 <p>Test réalisé à chaque fois</p>
-                <pre><code data-trim contenteditable>
+                <pre><code data-trim contenteditable class="js">
 function TestURL(){
     if (window.location == "http://google.fr"){
         alert("Google !");
@@ -520,7 +520,7 @@ function TestURL(){
 }
                 </code></pre>
                 <p>Test réalisé une fois</p>
-                <pre><code data-trim contenteditable>
+                <pre><code data-trim contenteditable class="js">
 function TestURL(){
     if (window.location == "http://google.fr"){
         return function() {
@@ -538,13 +538,13 @@ function TestURL(){
                 <h2>Astuce : IIFE ("iffy")</h2>
 
                 <p>Fonctions anonymes immédiatement appelées, un pattern de développement courant en JS. Permet d'éviter le Hoisting et de créer des portées lexicales (namespaces).</p>
-                <pre><code data-trim contenteditable>
+                <pre><code data-trim contenteditable class="js">
 (function(){
     // du code
 })();
                 </code></pre>
                 <p>Autre intérêt des IIFE, s'assurer que certain opérateurs sont surchargés comme vous le souhaitez. Exemple, si vous n'êtes pas sûr que <code>$</code> correspond à jQuery, encadrez votre code de :</p>
-                <pre><code data-trim contenteditable>
+                <pre><code data-trim contenteditable class="js">
 (function($){
     // votre code
 })(jQuery);
@@ -554,7 +554,7 @@ function TestURL(){
                 <h2>Piège : Référence Vs. Type</h2>
 
                 <p>Utilisation du renvoi de fonction et d'une IIFE</p>
-                <pre><code data-trim contenteditable>
+                <pre><code data-trim contenteditable class="js">
 var objects = [{}, {}, {}];
 
 for(var i = 0; i < objects.length; i++) {
@@ -571,6 +571,68 @@ objects[2].logIndex(); // 2!
                 </code></pre>
                 <p>Quand <code>index</code> est passé au <code>console.log()</code>, c'est par valeur cette fois !</p>
             </section>
+            <section>
+                <h2>Piège : DOM, JS et Memory Leak</h2>
+
+                <p>JavaScript et DOM n'ont pas le même <em>Garbage Collector</em>.</p>
+                <p>Bien que tous deux capables de gérer <strong>leurs</strong> références circulaires, ils ne sont pas capables de gérer les dépendances de l'autre univers...</p>
+                <pre><code data-trim contenteditable class="js">
+var jsObject;
+function FuiteMemoire(idDiv){
+    // On stocke dans une variable JS une référence au DOM
+    jsObject = document.getElementById(idDiv);
+
+    /* Plein de code */
+
+    //  Et là, le développeur se rate et référence l’objet JS
+    // depuis le DOM
+    document.getElementById(idDiv).expandoProperty= jsObject;
+}
+
+// Epic Fail : Memory Leak
+                </code></pre>
+            </section>
+            <section>
+                <h2>Piège : DOM, JS et Memory Leak</h2>
+
+                <p>Variante : le développeur référence depuis l'intérieur d'une énorme méthode un élément du DOM, qui lui même référence l'objet.</p>
+                <pre><code data-trim contenteditable class="js">
+function Encapsule(element){
+    // Assignation d’une propriété
+    this.elementReference = element;
+
+    // Référence circulaire
+    element.expandoProperty = this;
+}
+
+function EnormeMethode() {
+    /* Plein de code */
+
+    Encapsule(document.getElementById("maDiv"))
+
+    /* Encore plein de code */
+}
+                </code></pre>
+                <p><code>EnormeMethode</code> ne pourra jamais être nettoyée.</p>
+            </section>
+            <section>
+                <h2>Piège : DOM, JS et Memory Leak</h2>
+
+                <p>Variante la plus courante : attachement d'un évènement à une méthode anonyme, empêchant le GC de nettoyer l'un ou l'autre si l'un des éléments est supprimé.</p>
+                <pre><code data-trim contenteditable class="js">
+window.addEventListener("load", function(){
+    // obj sera ramassé par le GC dès qu’il sera sorti du contexte
+    var obj = document.getElementById("element");
+
+    // en revanche, la liaison ici relie un objet DOM à une
+    // méthode anonyme du JS, définie dans le même contexte que obj
+    obj.addEventListener("click", function(evt){
+        // logique
+    }, false);
+}, false);
+                </code></pre>
+                <p>Présent dans 99% des scripts.</p>
+            </section>
         </section>
         <section>
             <section>
@@ -581,7 +643,7 @@ objects[2].logIndex(); // 2!
                 <h2><a href="http://jquery.com/">jQuery</a></h2>
                 <p>Framework rapide, compact et gérant très bien l'asynchrone de <a href="https://twitter.com/jeresig">John Resig</a>, ayant remporté un grand succès, principalement parce qu'il a été adopté par les intégrateurs HTML.</p>
                 <p>Souvent utilisé pour faire des choses simples. Au lieu de les faire simplement.</p>
-                <pre><code data-trim contenteditable>
+                <pre><code data-trim contenteditable class="js">
 // jQuery
 $(el).hide();
 $(el).show();   // Ajoute un "display:block", WTF ?!
@@ -661,12 +723,55 @@ el.style.display = '';      // Ne fait que ce que vous lui demandez
             </section>
         </section>
         <section>
-            <h1>FIN</h1>
-
-            <h3>ça vous a plu ?</h3>
-            <small>par <a href="http://borisschapira.com" title="BorisSchapira.com, site web de Boris Schapira">Boris
-                Schapira</a> / <a href="http://twitter.com/borisschapira" title="Twitter de Boris Schapira">@borisschapira</a>
-            </small>
+            <section>
+                <h1>FIN</h1>
+                <h3>ça vous a plu ?</h3>
+                <small>par <a href="http://borisschapira.com" title="BorisSchapira.com, site web de Boris Schapira">Boris
+                    Schapira</a> / <a href="http://twitter.com/borisschapira" title="Twitter de Boris Schapira">@borisschapira</a>
+                </small>
+            </section>
+            <section>
+                <h2>Bonus : WTF JS ?!</h2>
+                <h3>Tiré de <a href="https://www.destroyallsoftware.com/talks/wat">Wat</a> par <a href="https://twitter.com/garybernhardt">Gary Bernhardt</a></h3>
+                <pre><code data-trim contenteditable class="js">
+result = [] + [];
+                </code></pre>
+                <pre class="fragment"><code data-trim contenteditable class="js">
+result = [] + []; // ""
+                </code></pre>
+            </section>
+            <section>
+                <h2>Bonus : WTF JS ?!</h2>
+                <h3>Tiré de <a href="https://www.destroyallsoftware.com/talks/wat">Wat</a> par <a href="https://twitter.com/garybernhardt">Gary Bernhardt</a></h3>
+                <pre><code data-trim contenteditable class="js">
+result = {} + [];
+                </code></pre>
+                <pre class="fragment"><code data-trim contenteditable class="js">
+result = [] + {}; // [object Object]
+                </code></pre>
+            </section>
+            <section>
+                <h2>Bonus : WTF JS ?!</h2>
+                <h3>Tiré de <a href="https://www.destroyallsoftware.com/talks/wat">Wat</a> par <a href="https://twitter.com/garybernhardt">Gary Bernhardt</a></h3>
+                <pre><code data-trim contenteditable class="js">
+"wtf" - 1
+                </code></pre>
+                <pre class="fragment"><code data-trim contenteditable class="js">
+"wtf" - 1 // NaN
+                </code></pre>
+            </section>
+            <section>
+                <h2>Bonus : WTF JS ?!</h2>
+                <h3>Tiré de <a href="https://www.destroyallsoftware.com/talks/wat">Wat</a> par <a href="https://twitter.com/garybernhardt">Gary Bernhardt</a></h3>
+                <pre><code data-trim contenteditable class="js">
+result = Array(16).join("wtf" - 1) + ' Batman !';
+                </code></pre>
+                <iframe width="420" height="315" src="//www.youtube.com/embed/EtoMN_xi-AM" frameborder="0" allowfullscreen></iframe>
+                <pre class="fragment"><code data-trim contenteditable class="js">
+result = Array(16).join("wtf" - 1) + ' Batman !';
+// "NaNNaNNaNNaNNaNNaNNaNNaNNaNNaNNaNNaNNaNNaNNaN Batman !"
+                </code></pre>
+            </section>
         </section>
 
     </div>
